--- a/index.html
+++ b/index.html
@@ -1,1 +1,68 @@
-Hello World
+<!DOCTYPE html>
+<html>
+    <head>
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+        <title>N-Squared Homework Challenges</title>
+    </head>
+    <body>
+        <div class="container">
+            <div class="row justify-content-md-center">
+                <div class="col-10">
+                    <main>
+                        <div class="py-5 text-center">
+                            <img src="./statics/images/logo.png">
+                        </div>
+                        <div>
+                            <h1>N-Squared Homework Challenges</h1>
+                        </div>
+                    </main>
+                    <section>
+                        <p>
+                            <strong>Welcome to the N-Squarer Engineering candidate testing area.</strong>
+                        </p>
+                        <p>
+                            If you wish to apply as an Engineer at <a href="https://nsquared.asia/">N-Squared eCommerce</a> please follow the instructions below and do the appropriate set of tests.
+                        </p>
+                    </section>
+                    <hr>
+                    <section>
+                        <h3>Our hiring process</h3>
+                        <p>We have a two steps process for hiring engineer at N-Squared eCommerce:</p>
+                        <ol>
+                            <li>Homework challenges</li>
+                            <li>Team interview</li>
+                        </ol>
+                        <h5>Step one</h5>
+                        <p>is the homework challenges below. The tests are designed to be relatively simple and easy to do, and should take no more than a couple of hours of your time.</p>
+                        <h5>Step two</h5>
+                        <p>is a final team interview in our office or online meeting.</p>
+                    </section>
+                    <hr>
+                    <section>
+                        <h3>Back-End Engineer</h3>
+                        <p>Applying as a Back-End Engineer (Python) please do following test and submit via this form.</p>
+                    </section>
+                    <hr>
+                    <section>
+                        <h3>Front-End Engineer</h3>
+                        <p>Applying as a Front-End Engineer (React) please do following test and submit via this form.</p>
+                    </section>
+                    <hr>
+                    <section>
+                        <h3>About us</h3>
+                        <p>N-Squared eCommerce is Southeast Asia’s leading online distributor and turnkey ecommerce solutions provider who operates an end-to-end business model including commercial strategy, inventory procurement, fulfillment, importation, merchandising, customer service, digital marketing, and social commerce solutions. The company’s management team is comprised of e-commerce industry experts and experienced online entrepreneurs.</p>
+                        <p>
+                            If you would like more information on N-Squared's tech stack and capabilities you can see more details <a>here</a>.
+                        </p>
+                    </section>
+                    <hr>
+                    <section>
+                        <h3>About us</h3>
+                        <p>© 2022 N-Squared eCommerce & New Step Asia — All Rights Reserved</p>
+                    </section>
+                </div>
+            </div>
+        </div>
+    </body>
+</html>
