--- a/index.html
+++ b/index.html
@@ -40,26 +40,32 @@
                     </section>
                     <hr>
                     <section>
+                        <h3>Software Engineering Test</h3>
+                        <p>Applying as a Software Engineer (Front-End / Back-End / Full-Stack) please do following test (Choose 2 from all) and <a target="_blank" href="https://forms.gle/VoNmHhsw3wpeKntR8">submit via this form.</a></p>
+                        <h5><a target="_blank" href="./test-frontend.html">Front-End Engineer</a></h5>
+                        <h5><a target="_blank" href="./test-backend.html">Back-End Engineer</a></h5>
+                        </section>
+                    <!-- <section>
                         <h3>Back-End Engineer</h3>
-                        <p>Applying as a Back-End Engineer (Python) please do following test and submit via this form.</p>
+                        <p>Applying as a Back-End Engineer (Python) please do following test and <a target="_blank" href="https://forms.gle/VoNmHhsw3wpeKntR8">submit via this form.</a></p>
                     </section>
                     <hr>
                     <section>
                         <h3>Front-End Engineer</h3>
-                        <p>Applying as a Front-End Engineer (React) please do following test and submit via this form.</p>
-                    </section>
+                        <p>Applying as a Front-End Engineer (React) please do following test and <a target="_blank" href="https://forms.gle/VoNmHhsw3wpeKntR8">submit via this form.</a></p>
+                    </section> -->
                     <hr>
                     <section>
                         <h3>About us</h3>
-                        <p>N-Squared eCommerce is Southeast Asia’s leading online distributor and turnkey ecommerce solutions provider who operates an end-to-end business model including commercial strategy, inventory procurement, fulfillment, importation, merchandising, customer service, digital marketing, and social commerce solutions. The company’s management team is comprised of e-commerce industry experts and experienced online entrepreneurs.</p>
+                        <p>N-Squared eCommerce is Southeast Asia's leading online distributor and turnkey ecommerce solutions provider who operates an end-to-end business model including commercial strategy, inventory procurement, fulfillment, importation, merchandising, customer service, digital marketing, and social commerce solutions. The company's management team is comprised of e-commerce industry experts and experienced online entrepreneurs.</p>
                         <p>
-                            If you would like more information on N-Squared's tech stack and capabilities you can see more details <a>here</a>.
+                            If you would like more information on N-Squared's tech stack and capabilities you can see more details (Comming Soon) <a>here</a>.
                         </p>
                     </section>
                     <hr>
                     <section>
                         <h3>About us</h3>
-                        <p>© 2022 N-Squared eCommerce & New Step Asia — All Rights Reserved</p>
+                        <p>© 2022 N-Squared eCommerce & New Step Asia - All Rights Reserved</p>
                     </section>
                 </div>
             </div>
