--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                     <hr>
                     <section>
                         <h3>Software Engineering Test</h3>
-                        <p>Applying as a Software Engineer (Front-End / Back-End / Full-Stack) please do following test (Choose 2 from all) and <a target="_blank" href="https://forms.gle/VoNmHhsw3wpeKntR8">submit via this form.</a></p>
+                        <p>Applying as a Software Engineer (Front-End / Back-End / Full-Stack) please do following test (Choose 1 or more from all) and <a target="_blank" href="https://forms.gle/VoNmHhsw3wpeKntR8">submit via this form.</a></p>
                         <h5><a target="_blank" href="./test-frontend.html">Front-End Engineer</a></h5>
                         <h5><a target="_blank" href="./test-backend.html">Back-End Engineer</a></h5>
                         </section>
