--- a/index.html
+++ b/index.html
@@ -41,10 +41,16 @@
                     <hr>
                     <section>
                         <h3>Software Engineering Test</h3>
-                        <p>Applying as a Software Engineer (Front-End / Back-End / Full-Stack) please do following test (Choose 1 or more from all) and <a target="_blank" href="https://forms.gle/VoNmHhsw3wpeKntR8">submit via this form.</a></p>
-                        <h5><a target="_blank" href="./test-frontend.html">Front-End Engineer</a></h5>
-                        <h5><a target="_blank" href="./test-backend.html">Back-End Engineer</a></h5>
-                        <h5><a target="_blank" href="./test-dataeng.html">Data Engineer</a></h5>
+                        <p>Applying as a Software Engineer please do following test and <a target="_blank" href="https://forms.gle/VoNmHhsw3wpeKntR8">submit via this form.</a></p>
+                        <ul>
+                            <li style="margin-bottom: 20px;"><h5><a target="_blank" href="./test-frontend.html">Front-End Engineer</a></h5> (Choose 1 or more from all)</li>
+                            <li style="margin-bottom: 20px;"><h5><a target="_blank" href="./test-backend.html">Back-End Engineer</a></h5> (Choose 1 or more from all) and <b>study Apache Kafka from <a target="_blank" href="https://developer.confluent.io/learn-kafka/apache-kafka/events/">This link</a></b></li>
+                            <li style="margin-bottom: 20px;">
+                                <h5><b>Full Stack Engineer</b> </h5>
+                                please select 1 Assignment for each <a target="_blank" href="./test-frontend.html">Front-End</a> and <a target="_blank" href="./test-frontend.html">Back-End</a> Engineer Assignment and <b>study Apache Kafka from <a target="_blank" href="https://developer.confluent.io/learn-kafka/apache-kafka/events/">This link</a></b>
+                            </li>
+                            <li style="margin-bottom: 20px;"><h5><a target="_blank" href="./test-dataeng.html">Data Engineer</a></h5> (Choose 1 or more from all) and <b>study Apache Kafka from <a target="_blank" href="https://developer.confluent.io/learn-kafka/apache-kafka/events/">This link</a></b>
+                        </ul>
                         </section>
                     <!-- <section>
                         <h3>Back-End Engineer</h3>
